make changes for auth header ifor user list
