# backend/docs/swagger.json
@@ -43,6 +43,11 @@
         },
         "/user/list": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a paginated list of users",
                 "produces": [
                     "application/json"
